...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/ns_parent_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:scaleType="center"
                android:backgroundTint="#eaeaea"
                app:borderWidth="0dp"
...
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:targetApi="lollipop" />

            <ImageView
                android:id="@+id/iv_bookmark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_title_detail"
                app:layout_constraintBottom_toBottomOf="@id/tv_title_detail"
                android:layout_marginEnd="8dp"
                android:padding="8dp"
                android:layout_width="wrap_content"
...
                android:fontFamily="@font/montserrat_medium"
                app:layout_constraintEnd_toEndOf="@id/iv_bookmark"
                app:layout_constraintStart_toStartOf="@id/tv_title_detail"
                app:layout_constraintTop_toBottomOf="@id/tv_synopsis" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_related_movie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/tv_related_movie"
                app:layout_constraintStart_toStartOf="@id/tv_related_movie"
...
