<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home"/>
    <item
        android:id="@+id/menu_tv"
        android:enabled="true"
        android:icon="@drawable/ic_tv"
        android:title="@string/tvs"/>
    <item
        android:id="@+id/menu_bookmark"
        android:enabled="true"
        android:icon="@drawable/ic_bookmarked"
        android:title="@string/bookmark"/>

</menu>